# parquetjni

./: .clang-format  .gitignore  CMakeLists.txt  README.rst  pom.xml
cpp/parquetjni/: com_twosigma_parquetjni_ParquetJni.cc  memory_tracking.cc  memory_tracking.h  parquetjni.cc  parquetjni.h  parquetjni_test.cc  s3file.cc  s3file.h  util.h
src/main/java/com/twosigma/parquetjni/: ParquetJni.java  ParquetJniReader.java  ReadOptions.java
src/test/java/com/twosigma/parquetjni/: ParquetJniReaderTest.java
